# rust-ticket-seckill

./: .env.example  .gitignore  IDENTITY.md  README.md  USER.md
.github/workflows/: backend-ci.yml  desktop-ci.yml  docker-image.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20260130000100_init.sql  20260130000300_users_and_order_status.sql  20260130000400_purchase_intents.sql
backend/src/: app.rs  auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  openapi.rs  worker.rs
backend/src/routes/: admin.rs  auth.rs  health.rs  mod.rs  orders.rs  purchase_intents.rs  seckill.rs
backend/tests/: api.rs
deploy/: README.md  docker-compose.yml
desktop/: .env.example  .prettierrc.json  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
desktop/src/: App.vue  main.ts  router.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/src/api/: client.ts  endpoints.ts  types.ts
desktop/src/stores/: auth.ts
desktop/src/views/: EventsView.vue  LoginView.vue  OrdersView.vue
docs/: API.md  ARCHITECTURE.md  CONCURRENCY.md  FAQ.md  RUN.md  SCHEMA.md  openapi.yaml  postman_collection.json
scripts/: dev_down.sh  dev_up.sh  load_test.sh  seed.sh
